# Virat-gazebo-sim

./: README.md
src/robot_virat/: CMakeLists.txt  package.xml
src/robot_virat/launch/: config.launch  move_base.launch  rviz.launch  virat.launch  virat.rviz
src/robot_virat/param/: costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  map.yaml
src/robot_virat/scripts/: keyboard_teleop.py  opencv.py
src/robot_virat/urdf/: my_robot.urdf
src/robot_virat/worlds/: grass.world
