<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_virat</name>
  <version>0.1.0</version>
  <description>Example setting gazebo momdel path from package.xml</description>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <!-- <export>
    <gazebo_ros gazebo_model_path="gazebo_model_path_example/models"/>
    <gazebo_ros gazebo_media_path="gazebo_model_path_example/meshes"/>
  </export> -->

</package>
